--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: streamer-sales
+name: cultural_relices_explan
 channels:
   - pytorch
   - nvidia
@@ -369,4 +369,4 @@ dependencies:
       - yapf==0.40.2
       - yarl==1.9.4
       - zipp==3.18.2
-prefix: /root/.conda/envs/streamer-sales
+prefix: /root/.conda/envs/cultural_relices_explan
